Prevent sized icons from inheriting vertical-align from ancestors

--- a/src/components/Icon/Icon.css
+++ b/src/components/Icon/Icon.css
@@ -3,9 +3,6 @@
   display: inline;
   position: relative;
   top: 0.2rem;
-  height: 1.4rem;
-  width: 1.4rem;
-  vertical-align: 0;
   fill: currentColor;
 
   /* IE/Edge do not bubble click events up from SVG elements, so allow clicks to pass through */
@@ -33,6 +30,7 @@
 .y-textSize-large .y-icon {
   height: 1.6rem;
   width: 1.6rem;
+  vertical-align: 0;
 }
 .y-textSize-medium .y-icon,
 .y-textSize-mediumSub .y-icon {
@@ -48,4 +46,5 @@
 .y-textSize-xSmall .y-icon {
   height: 1.2em;
   width: 1.2rem;
+  vertical-align: 0;
 }
